k8s/base/app/saleor/deployment.yml
# Core
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saleor-core
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: saleor-core
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: saleor
  name: saleor-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: core
      app.kubernetes.io/instance: saleor-core
      app.kubernetes.io/name: saleor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: core
        app.kubernetes.io/instance: saleor-core
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: saleor
        network/saleor-backend-tier: "true"
      name: salor-core
    spec:
      automountServiceAccountToken: false
      serviceAccountName: saleor
      containers:
        - image: ghcr.io/saleor/saleor:latest
          name: saleor
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: "1"
              ephemeral-storage: 1024Mi
              memory: 1Gi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/media
              name: saleor-media
            - name: saleor-secrets-store-inline
              mountPath: /mnt/secrets
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: saleor-media
          persistentVolumeClaim:
            claimName: saleor-media
        - name: saleor-secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: saleor-spc
---
# Worker
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saleor-worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/instance: saleor-worker
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: saleor
  name: saleor-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: worker
      app.kubernetes.io/instance: saleor-worker
      app.kubernetes.io/name: saleor
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: worker
        app.kubernetes.io/instance: saleor-worker
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: saleor
        network/saleor-backend-tier: "true"
      name: saleor-worker
    spec:
      automountServiceAccountToken: false
      serviceAccountName: saleor
      containers:
        - image: ghcr.io/saleor/saleor:latest
          name: saleor-worker
          args:
            - celery
            - -A
            - saleor
            - --app=saleor.celeryconf:app
            - worker
            - --loglevel=info
            - -B
          resources:
            limits:
              cpu: "1"
              ephemeral-storage: 1024Mi
              memory: 1Gi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 256Mi
          volumeMounts:
            - mountPath: /app/media
              name: saleor-media
      restartPolicy: Always
      volumes:
        - name: saleor-media
          persistentVolumeClaim:
            claimName: saleor-media
---
# Dashboard
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: saleor-dashboard
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: saleor-dashboard
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: saleor
  name: saleor-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: dashboard
      app.kubernetes.io/instance: saleor-dashboard
      app.kubernetes.io/name: saleor
  template:
    metadata:
      labels:
        app: saleor-dashboard
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: saleor-dashboard
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: saleor
    spec:
      automountServiceAccountToken: false
      serviceAccountName: saleor
      containers:
        - image: ghcr.io/saleor/saleor-dashboard:latest
          name: dashboard
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1024Mi
              memory: 1Gi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 256Mi
      restartPolicy: Always
---
