k8s/base/app/saleor/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: saleor
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/saleor-backend-tier: "true"
  podSelector:
    matchLabels:
      network/saleor-backend-tier: "true"
  policyTypes:
    - Ingress
    - Egress
